Fixed styles of menu items on mobile

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -68,7 +68,7 @@
     &.mobile {
         justify-content: center;
         padding: 15px 0;
-        font-size: 9px;
+        font-size: 8px;
         border: none;
         background-image: linear-gradient(to right, #222428, #2e3139);
 
@@ -81,6 +81,10 @@
         span {
             font-family: Montserrat-Thin;
             letter-spacing: 0.3px;
+        }
+
+        @media screen and (max-width: 320px) {
+            font-size: 7px;
         }
     }
   }
