--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -297,12 +297,13 @@ main {
     &.mobile {
         .left-content {
             width: 100%;
-            height: calc(100vh - 53px);
+            height: calc(100vh - 100px);
 
             &::after {
-                top: 80vh;
+                top: 72vh;
                 left: -25%;
                 width: 150%;
+                z-index: 999;
             }
 
             .first-line {
@@ -329,7 +330,7 @@ main {
 
             span.pre-sale {
                 position: absolute;
-                top: 55%;
+                top: 51%;
                 left: calc(50% - 94px);
                 background-color: #25262B;
                 border: 1px solid white;
@@ -344,9 +345,9 @@ main {
             .zed-logo {
                 width: 40px;
                 position: absolute;
-                bottom: 25px;
+                bottom: 20px;
                 left: calc(50% - 15px);
-                z-index: 99;
+                z-index: 1001;
             }
         }
     }
